2007-01-28  dima  <dima.exe@gmail.com>

	* rails-navigation.el: patch #8228

	* rails.el (ruby-mode-hook): remove variables tab-width and indent-tabs

	* rails-ws.el: make variable  rails-ws:default-server-type are customized (to fix #8223)

	* rails-lib.el: add cross declaration indent-or-complete (to fix #8221)

2007-01-27  dima  <dima.exe@gmail.com>

	* rails-for-controller.el (rails-controller:switch-with-menu):
	call rails-controller:switch-to-view for "Current view" 

	* rails-log.el (rails-log:open-file): run rails-minor-mode in log buffer

	* rails-ui.el: update "Open log" menu

	* rails.el: relete function rails-open-log, and place all log
	related fuction to rails-log.el

	* rails-log.el: create

	* rails-lib.el (apply-colorize-to-buffer): create

	* rails-ws.el: update rails-ws:*browser* functions

	* rails.el (rails-directory<-->types): add plugin directory

	* rails-for-view.el (rails-view:switch-with-menu): update menu title

	* rails-for-plugin.el: create

	* rails-for-helper.el (rails-helper:switch-with-menu): update menu title

	* rails-for-functional-test.el (rails-for-functional-test:switch-with-menu): update-menu-title

	* rails-for-controller.el (rails-controller:switch-with-menu): update menu title

	* rails-core.el (rails-core:menu): fix menu position 
	add new functions rails-core:plugin-files, rails-core:plugin-file,
	rails-core:current-plugin

2007-01-26  dima  <dima.exe@gmail.com>

	* rails-ui.el (rails-minor-mode-menu-bar-map): rename menu item WEBrick to Web Server.
	Update menu group Web Server

	* rails.el (rails-ws): add variable rails-default-environment

	* rails-ws.el: rename from rails-webrick, complete rewrite and cleanup

	* rails-navigation.el (rails-nav:create-goto-menu): now support
	nested lists in append-to-menu (ex. (list (cons) (cons)))
	(rails-nav:create-new-layout): cleanup
	(rails-nav:goto-layouts): cleanup

	* rails-core.el
	(rails-core:plugins): fix invalid path passed into directory-files