@@ -1,0 +1,3 @@
+(mapcar
+ #'byte-compile-file
+ (directory-files "./" t "\\.el$"))
